feat(tests): add unit tests for value objects and repository adapter
- Created unit tests for ExternalOrderId, Money, and ProductId value objects to validate creation, equality, and string representation.
- Implemented tests for OrderRepositoryAdapter to ensure correct behavior for saving, finding, and deleting orders.
- Added tests for OrderPersistenceMapper to verify mapping between domain and persistence entities.